# esp-idf

./: .gitignore  .gitmodules  00-libsodium.patch  01-asio.patch  build.sh  compile_commands.json  coredump.sh  debug.sh  flash.sh  gdbinit
Projects/ESP32_E-Puck_2/: .clangd  .gitignore  CMakeLists.txt  Makefile  sdkconfig  sdkconfig.bak  sdkconfig.old  xtensa-esp32-elf-g++.wrapper
Projects/ESP32_E-Puck_2/components/robot/: EpuckPackets.hpp  Makefile.projbuild  RobotCommsModel.hpp  UDPComms.hpp  component.mk  inter_robot_comms.cpp  types.hpp
Projects/ESP32_E-Puck_2/components/robot/include/: inter_robot_comms.h
Projects/ESP32_E-Puck_2/main/: ESP32_E-Puck_2.c  EpuckPackets.hpp  RGB_LED_e-puck.c  RGB_LED_e-puck.h  RobotCommsModel.hpp  UART_E-Puck_2.h  ble_spp_server_demo.c  ble_spp_server_demo.h  bluart_e-puck2.c  bluart_e-puck2.h  button_e-puck2.c  button_e-puck2.h  component.mk  http_server.c  inter_robot_comms.c  inter_robot_comms.h  main_e-puck2.c  main_e-puck2.h  rfcomm_E-Puck_2.c  rfcomm_E-Puck_2.h  rfcomm_e-puck2.c  rfcomm_e-puck2.h  rgb_led_e-puck2.c  rgb_led_e-puck2.h  socket_e-puck2.c  socket_e-puck2.h  spi_e-puck2.c  spi_e-puck2.h  uart_e-puck2.c  uart_e-puck2.h  wifi_manager.c  wifi_manager.h
Projects/ESP32_E-Puck_2/main/html/: monitor.html
Projects/ESP32_E-Puck_2/main/include/: socket_e-puck2.h
Projects/ESP32_Fishbot/: .python-version  Board1-Test1.txt  BoardWConn-Test2.txt  CMakeLists.txt  Makefile  README.md  Second Board avec  connecteur - SerialNINAPassthro  init.sh  sdkconfig  sdkconfig epuck2  sdkconfig.old
tools/: idf_monitor.py
(+44 files in other folders)
